src/styles/styles.css
/*adding my fonts*/
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&display=swap');

/* simple fadeni ahahsdhsjhaohfd ajggs  :D :D :D  */
@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

body {
   margin: 0;
   padding: 0;
   background-color: #f9f5d7;
}
h1, p {
    margin: 0;
}
p {
    margin-left: 7px;
}
.main-cont {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    max-width: 60%;
}
.sub-cont {
    display: flex;
    flex-direction: row;
    gap: 10%;
}
.sub-cont2 {
    display: flex;
    flex-direction: column;
    margin-top: 50px;
    gap: 15px;
}
.sub-cont2-div2 {
    display:flex;
    flex-direction: column;
    margin-top: 20px;
    gap: 15px;

	opacity: 0;
    animation: fadeIn 0.8s ease-out 0.4s forwards;
}

/* links */
.links-cont {
	display: flex;
	flex-direction: row;
	gap: 20px;
	margin: 10px 0 auto 0;
	
	opacity: 0;
	animation: fadeIn 0.8s ease-out 1.2s forwards;
}
.indiv-link {
	background-color: transparent;
	cursor: pointer;
	padding: 5px;
    transition: background-color 0.5s ease, color 0.5s ease, border-radius 0.5s ease;
}
.indiv-link:hover {
	color: #282828;
	border-radius: 5px;
	background-color: #f08b89;
}

/* navigation */
.navigation {
    padding-top: 20px;
    padding-bottom: 10px;

	opacity: 0;
	animation: fadeIn 0.3s ease-out 0.3s forwards;
}
.nav-bar {
    display: flex;
    flex-direction: row;
    gap: 3%;
    list-style-type: none;
    font-family: 'Noto Sans Mono', sans-serif;
    font-weight: 500;
    font-size: 15.5px;
    color: #504945;
    margin: 0;
    padding: 1%;
    background-color: transparent;
    border-radius: 5px;
}
.nav-bar a {
    text-decoration: none;
    color: inherit;
    padding: 10px;
    font-weight: 800;
    border-radius: 3px;
    transition: background-color 0.3s ease;
}
.nav-bar a:hover {
    background-color: #f08b89;
    color: #282828;
}

/* picture */
.photo-cont {
    max-width: 250px;
    margin: 30px 0 0 auto;
    padding: 0;

    opacity: 0;
    animation: fadeIn 0.8s ease-out 0.8s forwards;
}
.image {
    width: 100%;
    border-radius: 3px;
    margin-top: 19%;
}

/* font classes */
.t2 {
    font-family: 'Noto Sans Mono', sans-serif;
    font-size: 45px;
    font-weight: 600;
    color: #1d2021;

    opacity: 0;
    animation: fadeIn 0.3s ease-out 0s forwards;
}
.t3 {
    font-family: 'Noto Sans Mono', sans-serif;
    font-size: 16.5px;
    font-weight: 400;
    color: #504945;
}

/* responsive */
@media (max-width: 768px) {
    .main-cont {
        max-width: 90%;
    }
    .sub-cont {
        flex-direction: column-reverse;
        padding: 2%;
		gap: 10px;
		margin-top: 0;
    }
	.sub-cont2 {
		gap: 9px;
		margin-top: 0;
	}
    .photo-cont {
        width: 90%;
        max-width: 300px;
        margin: 0 auto 20px auto;
        flex-basis: auto;
    }
	.image {
		margin-top: 10px;
	}
	.sub-cont2-div2 {
		margin-top: 10px;
		text-align: center;
		margin-left: auto;
		margin-right: auto;
	}
    .t2 {
        font-size: 30px;
        text-align: center;
		padding-top: 10px;
    }
    .links-cont {
		justify-content: center;
        padding-top: 10px;
        padding-bottom: 20px;
	}

}

